--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -128,9 +128,9 @@
                         <h4 class="mb-3">
                           Сырная ферма и Пасека
                         </h4>
-                       <p class="p-2 bg-warning text-white">
+                       <p>
                            Самая вкусная экскурсия! Дегустация 7 видов сыра, меда, молока, йогурта!
-                           Шок цена раннего бронирования! БУДЬ ПЕРВЫМ, ВЕДЬ ИМЕННО ТУТ ЕЩЕ НЕ БЫЛИ ТУРИСТЫ!
+                           Шок цена раннего бронирования!<mark> БУДЬ ПЕРВЫМ, ВЕДЬ ИМЕННО ТУТ ЕЩЕ НЕ БЫЛИ ТУРИСТЫ!</mark>
                         </p>
                         <p class="txt-alg-jf">
                             Вытяжные сыры, сыры с плесенью, крапивой и в виде груши. Вы такого еще не 
