--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -130,7 +130,7 @@
                         </h4>
                        <p>
                            Самая вкусная экскурсия! Дегустация 7 видов сыра, меда, молока, йогурта!
-                           Шок цена раннего бронирования!<mark class=" bg-warning text-white"> БУДЬ ПЕРВЫМ, ВЕДЬ ИМЕННО ТУТ ЕЩЕ НЕ БЫЛИ ТУРИСТЫ!</mark>
+                           Шок цена раннего бронирования! БУДЬ ПЕРВЫМ, ВЕДЬ ИМЕННО ТУТ ЕЩЕ НЕ БЫЛИ ТУРИСТЫ!
                         </p>
                         <p class="txt-alg-jf">
                             Вытяжные сыры, сыры с плесенью, крапивой и в виде груши. Вы такого еще не 
