--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -128,7 +128,7 @@
                         <h4 class="mb-3">
                           Сырная ферма и Пасека
                         </h4>
-                       <p>
+                       <p class="txt-alg-jf">
                            Самая вкусная экскурсия! Дегустация 7 видов сыра, меда, молока, йогурта!
                            Шок цена раннего бронирования! БУДЬ ПЕРВЫМ, ВЕДЬ ИМЕННО ТУТ ЕЩЕ НЕ БЫЛИ ТУРИСТЫ!
                         </p>
