--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -287,13 +287,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="./images/Cheese-Farm/cheese-farm-1.jpg" class="d-block w-100" alt="chees-farm">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="./images/Cheese-Farm/cheese-farm-2.jpg" class="d-block w-100" alt="chees-farm">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="./images/Cheese-Farm/cheese-farm-3.jpg" class="d-block w-100" alt="cheese-farm">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
