--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -295,6 +295,21 @@
     <div class="carousel-item">
       <img src="./images/Cheese-Farm/cheese-farm-3.jpg" class="d-block w-100" alt="cheese-farm">
     </div>
+    <div class="carousel-item">
+      <img src="./images/Cheese-Farm/cheese-farm-4.jpg" class="d-block w-100" alt="cheese-farm">
+    </div>
+    <div class="carousel-item">
+      <img src="./images/Cheese-Farm/cheese-farm-5.jpg" class="d-block w-100" alt="cheese-farm">
+    </div>
+    <div class="carousel-item">
+      <img src="./images/Cheese-Farm/cheese-farm-6.jpg" class="d-block w-100" alt="cheese-farm">
+    </div>
+    <div class="carousel-item">
+      <img src="./images/Cheese-Farm/cheese-farm-7.jpg" class="d-block w-100" alt="cheese-farm">
+    </div>
+    <div class="carousel-item">
+      <img src="./images/Cheese-Farm/cheese-farm-8.jpg" class="d-block w-100" alt="cheese-farm">
+    </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
