--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -335,6 +335,24 @@
     <div class="carousel-item">
       <img class="d-block w-100" src="/image/Cheese-Farm/cheese-farm-2.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
     </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/Cheese-Farm/cheese-farm-3.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/Cheese-Farm/cheese-farm-4.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/Cheese-Farm/cheese-farm-5.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/Cheese-Farm/cheese-farm-6.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/Cheese-Farm/cheese-farm-7.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/image/Cheese-Farm/cheese-farm-8.jpg" data-src="holder.js/900x400?theme=industrial" alt="cheese" data-holder-rendered="true" style="width: 900px; height: 400px;">
+    </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
