--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -279,50 +279,6 @@
                         <!-- //Описание экскурсии -->
                       
                       <!-- Карусель -->
-                     <!-- <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="./images/Cheese-Farm/cheese-farm-1.jpg" class="d-block w-100" alt="chees-farm">
-    </div>
-    <div class="carousel-item">
-      <img src="./images/Cheese-Farm/cheese-farm-2.jpg" class="d-block w-100" alt="chees-farm">
-    </div>
-    <div class="carousel-item">
-      <img src="./images/Cheese-Farm/cheese-farm-3.jpg" class="d-block w-100" alt="cheese-farm">
-    </div>
-    <div class="carousel-item">
-      <img src="./images/Cheese-Farm/cheese-farm-4.jpg" class="d-block w-100" alt="cheese-farm">
-    </div>
-    <div class="carousel-item">
-      <img src="./images/Cheese-Farm/cheese-farm-5.jpg" class="d-block w-100" alt="cheese-farm">
-    </div>
-    <div class="carousel-item">
-      <img src="./images/Cheese-Farm/cheese-farm-6.jpg" class="d-block w-100" alt="cheese-farm">
-    </div>
-    <div class="carousel-item">
-      <img src="./images/Cheese-Farm/cheese-farm-7.jpg" class="d-block w-100" alt="cheese-farm">
-    </div>
-    <div class="carousel-item">
-      <img src="./images/Cheese-Farm/cheese-farm-8.jpg" class="d-block w-100" alt="cheese-farm">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Предыдущий</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Следующий</span>
-  </button>
-</div>-->
-                        <!-- //Карусель -->
-
-
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -330,6 +286,10 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
@@ -367,7 +327,7 @@
   </a>
 </div>
 
-
+<!-- //Карусель -->
 
                         <div class="alert alert-success">
                             <h5 class="alert-heading">В стоимость входит:</h5>
