--- a/booking.html
+++ b/booking.html
@@ -44,7 +44,7 @@
     <!-- //google fonts -->
 
     <!-- Facebook Pixel Code -->
-    <--<script>
+    <!--<script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};
