--- a/booking.html
+++ b/booking.html
@@ -139,7 +139,8 @@
                             </div>
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
-                                    <option>Тур</option>
+                                    <option>Тур</option> 
+                                    <option>Сырная Ферма И Пасека</option>
                                     <option>Зоопарк Пылышенко-Замок-Озеро</option>
                                     <option>Вино</option>
                                     <option>Грузия</option>
