--- a/page-Beer.html
+++ b/page-Beer.html
@@ -321,8 +321,8 @@
                <hr>
                <p>
                 Тексты подсказок:
-               </p>
-               <span class="badge rounded-pill bg-secondary text-white">                 
+               </p>         
+               <span class="badge rounded-pill bg-secondary alert-dismissible text-white fade show">                 
                     Дегустация пива
                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
