--- a/page-Beer.html
+++ b/page-Beer.html
@@ -322,12 +322,7 @@
                <p>
                 Тексты подсказок:
                </p>         
-               <span class="badge rounded-pill bg-secondary alert-dismissible text-white fade show">                 
-                    Дегустация пива
-                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                   </button>
-               </span>
+               <span class="badge rounded-pill bg-secondary text-white">Дегустация пива</span>
                <span class="badge rounded-pill bg-secondary text-white">Пивная экскурсия</span>
                <span class="badge rounded-pill bg-secondary text-white">Частная пивоварня</span>
                <span class="badge rounded-pill bg-secondary text-white">Натуральное пиво</span>
