--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -338,6 +338,19 @@
                   </div>
                </div>
                <!-- //owl-carousel -->
+
+               <hr>
+               <p>
+                Тексты подсказок:
+               </p>
+               <span class="badge rounded-pill bg-secondary text-white">Лимонарий Запорожья</span>
+               <span class="badge rounded-pill bg-secondary text-white">Лимонный сад Запорожье</span>
+               <span class="badge rounded-pill bg-secondary text-white">Экскурсия в лимонарий</span>
+               <span class="badge rounded-pill bg-secondary text-white">Лимоны Запорожье</span>
+               <span class="badge rounded-pill bg-secondary text-white">Солнечно-лимонное счастье</span>
+            
+
+
 			<!-- liq pay -->
 			<!--<div id="liqpay_checkout"></div>-->
                     </div>
