--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -347,7 +347,7 @@
                <span class="badge rounded-pill bg-secondary text-white">Лимонный сад Запорожье</span>
                <span class="badge rounded-pill bg-secondary text-white">Экскурсия в лимонарий</span>
                <span class="badge rounded-pill bg-secondary text-white">Лимоны Запорожье</span>
-               <span class="badge rounded-pill bg-secondary text-white">Солнечно-лимонное счастье</span>
+               <span class="badge rounded-pill bg-secondary text-white">Солнечные лимоны</span>
             
 
 
