--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -1,1 +1,92 @@
 <!-- page-balloon-festival.html -->
+22-23 мая 2021 НОВАЯ СОФИЕВКА УМАНЬ. ЦЕЛЕБНАЯ БАКОТА
+КАМЕНЕЦ-ПОДОЛЬСКИЙ ФЕСТИВАЛЬ ВОЗДУШНЫХ ШАРОВ.
+МЕДЖИБОШСКИЙ ЗАМОК БЕЛЫЙ ЛЕБЕДЬ.
+
+ПОЛУЧИТЬ МАКСИМУМ ОТ ВЫХОДНЫХ! ТАК ЧТОБ КАЖДАЯ МИНУТА БЫЛА ВОСХИТИТЕЛЬНОЙ!
+ЧУДЕСНЫЕ ВОЗДУШНЫЕ ШАРЫ НАД СТАРИННЫМ ЗАМКОМ! Мы побываем в прекрасном Каменец-Подольском, этот город завораживает своими обрывистыми каньонами, 
+старинными улочками и восхитительным замком! Раз в год небо этого города окрашивается разными красками, там витают огромные воздушные шары!
+Первозданная природа Бакоты, удивительные пещеры в которых жили монахи и ЦЕЛЕБНЕЙШИЙ ГОРНЫЙ РОДНИК! Мы не только побываем в этих прекрасных местах, 
+но и услышим их поразительные истории и сокровенные тайны ведь местный колоритный экскурсовод нам расскажет все и даже немного больше 
+ 
+ДРЕВНЕЙШАЯ ОБОРОННАЯ КРЕПОСТЬ МЕДЖИБОШ -ЗАМОК БЕЛЫЙ ЛЕБЕДЬ. Его вид завораживает взгляд, он настолько прекрасен, что хочется пойти искать там древних 
+рыцарей и принцесс. 
+
+ЧТО НИ ШАГ, ТО УДИВЛЕНИЕ! Творение современного искусства ПАРК НОВАЯ СОФИЕВКА, он собрал в себе фантазии и сказки. Огнедышащие драконы, крылатые лошади, 
+гигантские грибы, яркие пейзажи Японии, потрясающие фонтаны радуги и не только. 
+
+ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС! МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
+Ждем Вас, Ваших родных, близких и друзей на экскурсию! Собери компанию 16 человек, 17 едет бесплатно )
+
+Цена билета ДО 25 АПРЕЛЯ* :2600 грн от 6 до 200 лет, 2500 грн 7-10 лет
+С 26 АПРЕЛЯ по 9 МАЯ 2750 грн взрослые, 2650 грн 7-10 лет 
+С 10 МАЯ 2850 грн взрослые, 2750 грн 7-10 лет 
+Предоплата по брони 50% от стоимости. 
++380506702264 Viber/Telegram месенджер/директ
+Места в транспорте по датам оплат, раньше платишь, ближе к водителю едешь(1 кто забронировал, выбирает где сидит ;). 
+
+Хотите узнавать о новых турах первым?!
+Присоединяйтесь к сообществу в Viber: Новый Поворот Запорожье https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp
+
+22:00 21 мая выезд из Центра Запорожья после минутки позитива.
+Едем на комфортабельном транспорте тур.класса (раскладные сидения), TV
+Заберем Вас Автовокзал-Фестивальная-Металлургов-Каховская(уточняйте при бронировании)
+22 мая 12:00-12:30 обед в "Ресторації національної кухні "Ситий Козак" г.Каменец-Подольский
+Настоящий украинский Борщ или вкуснейший суп(на выбор), пюрешка с отбивной(как на празднике), 
+салатик свежесть, местный хлебушек, ароматный чай или вкуснейший компот(на выбор)
+После вкусного обеда направляемся на отдых в гостиницу.
+12:35-14:00 время отдыха после дороги.
+14:00-18:00- путешествие в Бакоту. Место с потрясающей природой, подышав там 1,5-2 часа вы забудете об усталости, ведь в компании самого колоритного Каменец-Подольского
+экскурсовода мы прогуляемся по старинным тропинкам средневековых монахов, и заглянем в их жилища-пещеры. Обязательно возьмем с собой бутылку для целебной родниковой воды,
+ведь по поверьям она лечит 1000 болезней!
+18:00-18:30 - ужин в в самом лучшем месте города "Ресторації національної кухні "Ситий Козак" г.Каменец-Подольский
+Антикризисная гречка с вкусной котлеткой или сытнейшие блинчики с творогом и изюмом в шоколаде (на выбор); ароматный чай или вкуснейший компот(на выбор)
+18:30-20:00 ВАУ экскурсия! В компании местного самого улыбчивого экскурсовода мы увидим: Старинный город, каньон речки Смотрич стены которого более 30м,
+силуэты средневекового замка, рыночную площадь с одной из древнейших ратуш Украины, уникальнейшую архитектурную композицию мусульманский минарет у христианского храма, об этом можно еще 
+
+писать и писать, стоит это все увидеть и услышать!
+20:00-все кто устал отправляются на отдых в гостиницу, а кто еще хочет гулять и делать потрясающие фото для Instagram и супер видео для Tik Tok продолжает прогулку.
+Не забывайте о нас когда выставляете сторизы и фото:) Отмечайте наши странички, Вам +1000000000 в карму 
+
+23 мая 7:00 кто рано встал, тот все успел! А у нас еще впереди Меджибош и Умань! Потому самостоятельно завтракаем и быстренько выезжаем дальше.
+Кто опоздает, назначается фотографом и делает всем по фотке в супер-ракурсе или поет зажигательную песню чтоб всем взбодриться:)
+10:00-11:00- поразительная крепость, на его фоне чувствуешь себя песчинкой в океане времени. Замок Белый Лебедь. Почему ? А мы это узнаем от местного экскурсовода!(доп.расход)
+Посещение замка по-желанию. Можно сделать фото на его фоне и полежать на травке отдохнуть от всех 
+13:00-13:30 - супер вкусное кафе в Умани . Сами активно выбираем что хотим и набираемся сил перед прогулкой в парке.(доп.расход)
+13:40-14:40 - Новая Софиевка ЧЮДО СКАЗКА Умани. Самое потрясающее место чтоб посмотреть и сделать удивительные фото. Огнедышащие драконы, крылатые лошади, 
+гигантские грибы, яркие пейзажи Японии, потрясающие фонтаны радуги и не только. 
+По-желанию берем местного экскурсовода и слушаем потрясающую историю создания Нового парка(доп.расход) или гуляем без ведь парк сам по-себе прекрасен и вся информация о нем на стендах возле 
+
+объектов.
+Чтоб не заслужить общий гнев группы, вовремя собираемся и отправляемся в путь.
+23:00-1:30- ориентировочное время прибытия. Почему так, зависит от длительности стоянок, иногда сложно всем собраться после хорошего отдыха и дороги. Мы не знаем насколько будет загружена 
+трасса в день возврата.
+Прибываем в Запорожье высаживаем от Каховской и дальше по проспекту до Автовокзала. 
+Возвращаемся полностью отдохнувшими в потрясающем настроении, с морем впечатлений и крутыми фото!
+Всех обнимаем и ждем запись на тур!
+*время указано предварительно и может меняться незначительно для улучшения отдыха туристам!
+
+
+В стоимости: 
+проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; 
+(от количества людей в группе, места в транспорте по датам оплат)
+транспорт тур.класса с раскладными сиденьями, ТВ;
+самая увлекательная экскурсия по Бакоте 1,5-2 часа;
+рекреационный збор в Бакоте;
+интереснейшая экскурсия по Каменец-Подольскому центру;
+питание обед и ужин в "Ресторації національної кухні "Ситий Козак" г.Каменец-Подольский ;
+1 ночь в мини гостинице домашнего типа Старый город г.Каменец-Подольский 
+10 минут пешком до замка(Центр города) номера 4, 5, 6 мест в номере члены группы нет посторонних
+в гостинице (микроволновка, чайник, холодильник, утюг, WI-FI);
+входной билет в Парк Новая Софиевка;
+сопровождение представителя нашей компании,
+магнит от Нового поворота,
+самое замечательное настроение.
+
+Дополнительно оплачиваеться:
+Входные билеты Меджибожский замок до 70 грн с экскурсией(по-желанию);
+Питание в дороге кроме запланированного в стоимости;
+Экскурсия по Новой Софиевке Умань (по-желанию);
+
+#Запорожье #НовыйповоротЗапорожье #путешествия #туризм #КаменецПодольсикийфестивальвоздушныхшаровизЗапорожье #БакотаизЗапорожья  #НоваяСофиевкаУмань #экскурсииЗапорожье
+#кудапоехатьЗапорожье #достопримечательностиЗапорожье #афишаЗапорожья #ZAporizhya #замоквКаменецПодольском #Меджибожскийзамок
