--- a/packages.html
+++ b/packages.html
@@ -133,7 +133,7 @@
                             <a href="https://novipovorot.pp.ua/page-cheese-farm.html">Сырная ферма и Пасека</a>
                         </h5>
                         <p class="">
-                          Самая вкусная экскурсия и дегустация
+                          Самая вкусная экскурсия
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>18 Апреля 2021 Года</span></li>
