--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -243,43 +243,92 @@
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-                                        <p><strong>11:00 </strong>
-                                             Выезд с центра Запорожья после минутки позитива. 
-                                            Фестивальная- Металлургов - Каховская заберем Вас в этих 3х местах где 
-                                            удобно, о месте посадки пишите при бронировании.
+                                        <p><strong>22:00, 21 мая</strong>
+                                            Выезд из Центра Запорожья после минутки позитива.
+                                            Едем на комфортабельном транспорте тур.класса (раскладные сидения), TV
+                                            Заберем Вас Автовокзал-Фестивальная-Металлургов-Каховская(уточняйте при бронировании)
+                                            22 мая 12:00-12:30 обед в "Ресторації національної кухні "Ситий Козак" г.Каменец-Подольский
+                                            Настоящий украинский Борщ или вкуснейший суп(на выбор), пюрешка с отбивной(как на празднике), 
+                                            салатик свежесть, местный хлебушек, ароматный чай или вкуснейший компот(на выбор)
+                                            После вкусного обеда направляемся на отдых в гостиницу.
                                         </p>
-                                        <p><strong>11:50-12:50 </strong>
-                                             Экскурсия по Пасеке. Посещаем улики где живут трудяжки 
-                                             пчелки, в защитных костюмах и под присмотром опытного пасечника!
-                                             Пробуем 2 вида меда: подсолнух и разнотравье, плюс вкуснейший забрус 
-                                             (медовые соты). По желанию берем покупаем медок с собой, 
-                                             Цены супер! Для наших туристов 130 грн/л, 3л -380 грн.
-                                             После вкусной дегустации отправляемся дальше на Сырную ферму.
+                                        <p><strong>12:35-14:00 </strong>
+                                             Время отдыха после дороги.
                                         <p/>
-                                          <p><strong>13:00-14:30 (15:00) </strong>
-                                                Мы в удивительном месте настоящей Сырной ферме. Такие 
-                                                фермы мы видели лишь в Закарпатском Хусте. Но эта еще интереснее! Ведь в 
-                                                этом месте рождаются шедевры сыроварения! Тут сыры свисают с потолка в 
-                                                виде грушек, на полочках покрываются вкусной корочкой, источают 
-                                                неописуемый аромат, ведь невозможно передать словами этот чудесный вкус 
-                                                натурального сыра. Мы попробуем 7 сыров: Вознесеновский со смесью трав,  
-                                                Качотта, Гауда с крапивой,  Альпийский, Пармарелло, Качокавалло + 
-                                                "ЗАГАДКА" ОДИН ВИД СЫРА ВЫ УЗНАЕТЕ УЖЕ НА ФЕРМЕ!
-                                                Мы увидим миленьких козочек и козляточек, а у Александра их больше 70 
-                                                голов. Познакомимся с осликом Кешей и угостим его вкусным сеном. 
-                                                Попробуем настоящего козьего молочка и вкуснейшего йогурта. 
-                                                Мы посмотрим весь путь который проходит сыр от молочка до ароматного и 
-                                                вкусами любимого блюда, увидим больше 40 видов различных сыров...
-                                                Я могу еще долго писать Вам так нам будет хорошо, но стоит увидеть своими 
-                                                глазами эту красоту. 
+                                          <p><strong>14:00-18:00 </strong>
+                                             Путешествие в Бакоту. Место с потрясающей природой,
+                                             подышав там 1,5-2 часа вы забудете об усталости, ведь 
+                                             в компании самого колоритного Каменец-Подольского
+                                             экскурсовода мы прогуляемся по старинным тропинкам 
+                                             средневековых монахов, и заглянем в их жилища-пещеры.
+                                             Обязательно возьмем с собой бутылку для целебной родниковой воды,
+                                             ведь по поверьям она лечит 1000 болезней!
                                         </p>
-                                        <p><strong>15:50 </strong>
-                                            Мы уже в Запорожье, В ПОЛНОМ ВОСТОРГЕ с сыром и медом возвращаемся 
-                                            домой чтоб поделится впечатлениями с друзьями и близкими (но еще лучше их взять с собой).
+                                        <p><strong>18:00-18:30 </strong>
+                                            Ужин в самом лучшем месте города "Ресторації національної кухні 
+                                            "Ситий Козак" г.Каменец-Подольский. 
+                                            Антикризисная гречка с вкусной котлеткой или сытнейшие блинчики 
+                                            с творогом и изюмом в шоколаде (на выбор); 
+                                            Ароматный чай или вкуснейший компот(на выбор).
+                                        </p>
+                                        <p><strong>18:30-20:00 </strong>
+                                            ВАУ экскурсия! В компании местного самого улыбчивого 
+                                            экскурсовода мы увидим: Старинный город, каньон речки Смотрич стены которого более 30м,
+                                            силуэты средневекового замка, рыночную площадь с одной из 
+                                            древнейших ратуш Украины, уникальнейшую архитектурную композицию 
+                                            мусульманский минарет у христианского храма, об этом можно еще 
+                                            писать и писать, стоит это все увидеть и услышать!
+                                        </p>
+                                        <p><strong>20:00 </strong>
+                                            Все кто устал отправляются на отдых в гостиницу,
+                                            а кто еще хочет гулять и делать потрясающие фото для
+                                            Instagram и супер видео для Tik Tok продолжает прогулку.
+                                            Не забывайте о нас когда выставляете сторизы и фото:) 
+                                            Отмечайте наши странички, Вам +1000000000 в карму! 
+                                        </p>
+                                        <p><strong>23 мая, 07:00 </strong>
+                                            Кто рано встал, тот все успел! А у нас еще впереди Меджибош и Умань! 
+                                            Потому самостоятельно завтракаем и быстренько выезжаем дальше.
+                                            Кто опоздает, назначается фотографом и делает всем по фотке в 
+                                            супер-ракурсе или поет зажигательную песню чтоб всем взбодриться:) 
+                                        </p>
+                                        <p><strong>10:00-11:00 </strong>
+                                            Поразительная крепость, на его фоне чувствуешь себя песчинкой
+                                            в океане времени. Замок Белый Лебедь. Почему ? А мы это узнаем 
+                                            от местного экскурсовода!(доп.расход)
+                                            Посещение замка по-желанию. Можно сделать фото на его фоне и 
+                                            полежать на травке отдохнуть от всех  
+                                        </p>
+                                        <p><strong>13:00-13:30 </strong>
+                                            Супер вкусное кафе в Умани . Сами активно выбираем что хотим и
+                                            набираемся сил перед прогулкой в парке (доп.расход).
+                                        </p>
+                                        <p><strong>13:40-14:40 </strong>
+                                            Новая Софиевка ЧЮДО СКАЗКА Умани. Самое потрясающее место 
+                                            чтоб посмотреть и сделать удивительные фото. 
+                                            Огнедышащие драконы, крылатые лошади, 
+                                            гигантские грибы, яркие пейзажи Японии, 
+                                            потрясающие фонтаны радуги и не только. 
+                                            По-желанию берем местного экскурсовода и слушаем 
+                                            потрясающую историю создания Нового парка(доп.расход)
+                                            или гуляем без ведь парк сам по-себе прекрасен и вся
+                                            информация о нем на стендах возле объектов.
+                                            Чтоб не заслужить общий гнев группы, вовремя
+                                            собираемся и отправляемся в путь.
+                                        </p>
+                                        <p><strong>23:00-01:30 </strong>
+                                            Ориентировочное время прибытия. 
+                                            Почему так, зависит от длительности стоянок,
+                                            иногда сложно всем собраться после хорошего отдыха и дороги.
+                                            Мы не знаем насколько будет загружена 
+                                            трасса в день возврата.
+                                            Прибываем в Запорожье высаживаем от Каховской и дальше по проспекту до Автовокзала. 
+                                            Возвращаемся полностью отдохнувшими в потрясающем настроении, с морем впечатлений и крутыми фото!
+                                            Всех обнимаем и ждем запись на тур!
                                         </p>
                                         <hr>
                                         <p>
-                                         <i> *время указано предварительно и может быть незначительно изменено без ущерба качеству экскурсии.</i>
+                                         <i> *время указано предварительно и может меняться незначительно для улучшения отдыха туристам!</i>
                                         </p> 
                                     </div>
                                 </div>
@@ -343,24 +392,36 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
                                   Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; 
+                                    (от количества людей в группе, места в транспорте по датам оплат) 
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    экскурсия по Сырной ферме;
+                                    транспорт тур.класса с раскладными сиденьями, ТВ;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   дегустация 7 видов сыра, молоко, йогурт;
+                                   самая увлекательная экскурсия по Бакоте 1,5-2 часа;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    экскурсия по Пасеке;
+                                    рекреационный збор в Бакоте;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    дегустация 2 вида меда и забрус;
+                                    интереснейшая экскурсия по Каменец-Подольскому центру;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    питание обед и ужин в "Ресторації національної кухні "Ситий Козак" г.Каменец-Подольский;
+                                </li>
+                                 <li class="list-group-item list-group-item-success ">
+                                    1 ночь в мини гостинице домашнего типа Старый город г.Каменец-Подольский 
+                                    10 минут пешком до замка(Центр города) номера 4, 5, 6 мест в номере члены группы нет посторонних
+                                    в гостинице (микроволновка, чайник, холодильник, утюг, WI-FI);
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    входной билет в Парк Новая Софиевка;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     сопровождение представителя нашей компании;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    магнит от Нового поворота.
+                                    магнит от Нового поворота, самое замечательное настроение.
                                 </li>
                             </ul>
                         </div>
@@ -368,26 +429,29 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    Индивидуальная покупка меда  130 грн/л, 3л -380 грн;
+                                   Входные билеты Меджибожский замок до 70 грн с экскурсией(по-желанию);
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
-                                    индивидуальная покупка сыра от 45 до 60 грн /100 г от вида и йогурта. 
+                                    питание в дороге кроме запланированного в стоимости; 
                                 </li>
-                                <ul>
+                                 <li class="list-group-item list-group-item-danger ">
+                                    экскурсия по Новой Софиевке Умань (по-желанию); 
+                                </li>
+                             <ul>
                         </div>
                      <hr>
                <p>
                 Тексты подсказок:
                </p>
-               <span class="badge rounded-pill bg-secondary text-white"> Запорожье</span>
-               <span class="badge rounded-pill bg-secondary text-white"> Новый Поворот Запорожье</span>
+               <span class="badge rounded-pill bg-secondary text-white"> Запорожье </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Новый Поворот Запорожье </span>
                <span class="badge rounded-pill bg-secondary text-white"> Путешествия </span>
                <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>
-               <span class="badge rounded-pill bg-secondary text-white"> Сырная Ферма Запорожье </span>
-               <span class="badge rounded-pill bg-secondary text-white"> Пасека Запорожье </span>
-               <span class="badge rounded-pill bg-secondary text-white"> Медовая экскурсия  </span>
-               <span class="badge rounded-pill bg-secondary text-white"> Дегустация сыра </span>
-               <span class="badge rounded-pill bg-secondary text-white"> Дегустация меда </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Запорожье-Каменец Подольсикий </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Фестиваль воздушных шаров из Запорожье </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Бакота из Запорожья </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Новая Софиевка Умань </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Замок в Каменец Подольском </span>
                       <!-- <div id="liqpay_checkout"></div>-->
                     </div>
                 </div>
