--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Фестиваль Воздушных Шаров"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-balloon-festival.html"/>
-    <meta property="og:image" content="images/balloon-festival-max.jpg">
+    <meta property="og:image" content="/images/Baloon-fast/balloon-fastival-max.jpg">
     <!--End Open Graph data-->
 
     <script>
@@ -116,7 +116,7 @@
                     <h3 class="title">Фестиваль Воздушных Шаров</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="images/balloon-festival-max.jpg" alt="news image" class="img-fluid">
+                    <img src="/images/Baloon-fast/balloon-fastival-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
@@ -141,24 +141,24 @@
                             Раз в год небо этого города окрашивается разными красками,
                             там витают огромные воздушные шары!
                             Первозданная природа Бакоты, удивительные 
-                            пещеры в которых жили монахи и ЦЕЛЕБНЕЙШИЙ ГОРНЫЙ РОДНИК!
+                            пещеры в которых жили монахи и целебный горный родник!
                             Мы не только побываем в этих прекрасных местах, 
                             но и услышим их поразительные истории и сокровенные тайны
                             ведь местный колоритный экскурсовод нам расскажет все и даже немного больше 
-                            ДРЕВНЕЙШАЯ ОБОРОННАЯ КРЕПОСТЬ МЕДЖИБОШ -ЗАМОК БЕЛЫЙ ЛЕБЕДЬ. 
+                            древнейшая оборонная крепость Меджибош - замок Белый Лебедь. 
                             Его вид завораживает взгляд, он настолько прекрасен, что хочется пойти искать там древних 
                             рыцарей и принцесс. 
                         </p>
                         <p class="txt-alg-jf">
-                            ЧТО НИ ШАГ, ТО УДИВЛЕНИЕ! Творение современного искусства 
-                            ПАРК НОВАЯ СОФИЕВКА, он собрал в себе фантазии и сказки.
+                            Что ни шаг, то удивление! Творение современного искусства 
+                            парк Новая Софиевка, он собрал в себе фантазии и сказки.
                             Огнедышащие драконы, крылатые лошади, 
                             гигантские грибы, яркие пейзажи Японии,
                             потрясающие фонтаны радуги и не только.
                         </p>
                         <p class="p-2 bg-warning text-white txt-alg-jf">
-                         ТАКОГО ВЫ ЕЩЕ НЕ ВИДЕЛИ! БРОНИРУЙТЕ УЖЕ СЕЙЧАС!
-                         МЕСТА ОГРАНИЧЕНЫ! КТО БУДЕТ ДОЛГО ДУМАТЬ СИДИТ ДОМА И ЗАВИДУЕТ МОЛЧА 
+                         Такого вы еще не видели!Бронируйте уже сейчас!
+                         Места ограничены! Кто будет долго думать сидит дома и завидует молча.
                          Ждем Вас, Ваших родных, близких и друзей на экскурсию!
                          Собери компанию 16 человек, 17 едет бесплатно )
                         </p>
@@ -170,9 +170,9 @@
                             
                             <span  class="fa fa-info-circle"></span><strong> Информируем</strong><br />
                             <span class="txt-alg-jf">
-                                Цена билета ДО 25 АПРЕЛЯ* : <strong>2600 грн.</strong> от 6 до 200 лет, <strong>2500 грн.</strong> 7-10 лет
-                                С 26 АПРЕЛЯ по 9 МАЯ <strong>2750 грн.</strong> взрослые, <strong>2650 грн.</strong> 7-10 лет 
-                                С 10 МАЯ <strong>2850 грн.</strong> взрослые, <strong>2750 грн.</strong> 7-10 лет 
+                                Цена билета до 25 апреля* : <strong>2600 грн.</strong> от 6 до 200 лет, <strong>2500 грн.</strong> 7-10 лет
+                                С 26 апреля по 9 МАЯ <strong>2750 грн.</strong> взрослые, <strong>2650 грн.</strong> 7-10 лет 
+                                С 10 мая <strong>2850 грн.</strong> взрослые, <strong>2750 грн.</strong> 7-10 лет 
                                 Предоплата по брони 50% от стоимости. 
                             </span>
                         </div>
