--- a/packages.html
+++ b/packages.html
@@ -209,7 +209,7 @@
                 </div>
                 <!--  //Грузия  -->
 
-                <!--  Кофе -->
+                <!-- Фестиваль воздушных шаров  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                        <a href="https://novipovorot.pp.ua/page-cofe-Isla.html">
@@ -233,7 +233,7 @@
                         </ul>
                     </div>
                 </div>
-                <!--  //Кофе -->
+                <!--  //Фестиваль воздушных шаров -->
 
                 <!--  Пиво -->
                 <div class="col-lg-3 col-sm-6 mb-5">
