--- a/packages.html
+++ b/packages.html
@@ -212,20 +212,20 @@
                 <!-- Фестиваль воздушных шаров  -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                       <a href="https://novipovorot.pp.ua/page-cofe-Isla.html">
-                            <img src="images/cofe-mini.jpg" alt="Beer" class="img-fluid" />
+                       <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                            <img src="src="/images/Baloon-fast/balloon-fastival-min.jpg" alt="Beer" class="img-fluid" />
                        </a>
-                        <p><span class="fa fa-tags"></span> <span>195грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>2600грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина.</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span> Украина.</h6>
                         <h5 class="my-2">
-                           <a href="https://novipovorot.pp.ua/page-cofe-Isla.html">
-                                Кофе Isla
+                           <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
+                               Фестиваль Воздушных Шаров
                            </a>
                         </h5>
                         <p class="">
-                           50 оттенков кофе Isla. Экскурсия и дегустация...
+                           Умань, Каменец Подольский
                         </p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано </span></li>
