--- a/packages.html
+++ b/packages.html
@@ -225,11 +225,11 @@
                            </a>
                         </h5>
                         <p class="">
-                           Умань, Каменец Подольский
+                           Умань, Каменец Подольский...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано </span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 22-23 Мая 2021 Года </span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
                 </div>
