--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -131,8 +131,9 @@
                             Меджибошский Замок Белый Лебедь.
                         </h4>
                        <p class="txt-alg-jf">
-                           ПОЛУЧИТЬ МАКСИМУМ ОТ ВЫХОДНЫХ! ТАК ЧТОБ КАЖДАЯ МИНУТА БЫЛА ВОСХИТИТЕЛЬНОЙ!
-                           ЧУДЕСНЫЕ ВОЗДУШНЫЕ ШАРЫ НАД СТАРИННЫМ ЗАМКОМ!
+                           Получить максимум от выходных, так чтоб каждая минута
+                           была восхитительной.
+                           
                         </p>
                         <p class="txt-alg-jf">
                             Мы побываем в прекрасном Каменец-Подольском,
