--- a/packages.html
+++ b/packages.html
@@ -213,7 +213,7 @@
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
                        <a href="https://novipovorot.pp.ua/page-balloon-festival.html">
-                            <img src="src="images/Baloon-fast/balloon-festival-min.jpg" alt="baloon-fast" class="img-fluid" />
+                            <img src="images/Baloon-fast/balloon-festival-min.jpg" alt="baloon-fast" class="img-fluid" />
                        </a>
                         <p><span class="fa fa-tags"></span> <span>2600грн.</span></p>
                     </div>
