--- a/booking.html
+++ b/booking.html
@@ -140,6 +140,7 @@
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
                                     <option>Тур</option> 
+                                    <option>Фестиваль Воздушных Шаров </option>
                                     <option>Сырная Ферма И Пасека</option>
                                     <option>Зоопарк Пылышенко-Замок-Озеро</option>
                                     <option>Вино</option>
