--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
                                 <div class="col-lg-4 col-md-6 inner-w3pvt-wrap">
                                     <div class="inner-sec-grid">
                                         <span class="fa fa-gift"></span>
-                                        <h4 class="mt-md-4 mt-2">Сопровождение Агентом</h4>
+                                        <h4 class="mt-md-4 mt-2">Сопровождение</h4>
                                         <p class="mt-3"></p>
                                     </div>
                                 </div>
