--- a/page-gold-mines.html
+++ b/page-gold-mines.html
@@ -688,5 +688,88 @@
                         </div>
                      
                         <!-- //Описание экскурсии -->
+                        <div class="alert alert-success">
+                            <h5 class="alert-heading">В стоимость входит:</h5>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item list-group-item-success">
+                                  Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест; 
+                                    (от количества людей в группе, места в транспорте по датам оплат) 
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    транспорт тур.класса с раскладными сиденьями, ТВ;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                   самая увлекательная экскурсия по Бакоте 1,5-2 часа;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    рекреационный збор в Бакоте;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    интереснейшая экскурсия по Каменец-Подольскому центру;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    питание обед и ужин в "Ресторації національної кухні "Ситий Козак" г.Каменец-Подольский;
+                                </li>
+                                 <li class="list-group-item list-group-item-success ">
+                                    1 ночь в мини гостинице домашнего типа Старый город г.Каменец-Подольский 
+                                    10 минут пешком до замка(Центр города) номера 4, 5, 6 мест в номере члены группы нет посторонних
+                                    в гостинице (микроволновка, чайник, холодильник, утюг, WI-FI);
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    входной билет в Парк Новая Софиевка;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    сопровождение представителя нашей компании;
+                                </li>
+                                <li class="list-group-item list-group-item-success ">
+                                    магнит от Нового поворота, самое замечательное настроение.
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="alert alert-danger">
+                            <h5 class="alert-heading">В стоимость не входит:</h5>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item list-group-item-danger ">
+                                   Входные билеты Меджибожский замок до 70 грн с экскурсией(по-желанию);
+                                </li>
+                                <li class="list-group-item list-group-item-danger ">
+                                    питание в дороге кроме запланированного в стоимости; 
+                                </li>
+                                 <li class="list-group-item list-group-item-danger ">
+                                    экскурсия по Новой Софиевке Умань (по-желанию); 
+                                </li>
+                             <ul>
+                        </div>
+                     <hr>
+               <p>
+                Тексты подсказок:
+               </p>
+               <span class="badge rounded-pill bg-secondary text-white"> Запорожье </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Новый Поворот Запорожье </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Путешествия </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Запорожье-Каменец Подольсикий </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Фестиваль воздушных шаров из Запорожье </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Бакота из Запорожья </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Новая Софиевка Умань </span>
+               <span class="badge rounded-pill bg-secondary text-white"> Замок в Каменец Подольском </span>
+                      <!-- <div id="liqpay_checkout"></div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
+    <!--//single page--> 
+
+
+
+
+
+
+
+
+
 
 
