--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -539,7 +539,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div><!--
+                    </div>
                    
                     <!-- Begin Mailchimp Signup Form -->
                      <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
