--- a/page-gold-mines.html
+++ b/page-gold-mines.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Золотые прииски Закарпатья"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/page-gold-mines.html"/>
-    <meta property="og:image" content="/images/golds-mines-min.jpg">
+    <meta property="og:image" content="/images/golds-mines-max.jpg">
     <!--End Open Graph data-->
 
     <script>
@@ -115,7 +115,7 @@
                     <h3 class="title"> Золотые прииски Закарпатья </h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="/images/golds-mines-min.jpg" alt="news image" class="img-fluid">
+                    <img src="/images/golds-mines-max.jpg" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
