--- a/page-gold-mines.html
+++ b/page-gold-mines.html
@@ -379,70 +379,39 @@
     <div class="container">
       <div class="card">
         <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #1" data-fancybox="gallery"
-            href="./assets/img/thumb-01.jpg">
-            <img src="./assets/img/thumb-01.jpg"></a>
+            href="/images/Gold-mines/thumb-gold-mines-1.jpg ">
+            <img src="/images/Gold-mines/thumb-gold-mines-1.jpg"></a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #2" data-fancybox="gallery"
-            href="./assets/img/thumb-02.jpg">
-            <img src="./assets/img/thumb-02.jpg"></a>
+            href="/images/Gold-mines/thumb-gold-mines-2.jpg">
+            <img src="/images/Gold-mines/thumb-gold-mines-2.jpg"></a>
         </div>
       </div>
       <div class="card">
         <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #3" data-fancybox="gallery"
-            href="./assets/img/thumb-03.jpg">
-            <img src="./assets/img/thumb-03.jpg"></a>
+            href="/images/Gold-mines/thumb-gold-mines-3.jpg">
+            <img src="/images/Gold-mines/thumb-gold-mines-3.jpg"></a>
         </div>
       </div>
 
       <div class="card">
         <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #4" data-fancybox="gallery"
-            href="./assets/img/thumb-04.jpg">
-            <img src="./assets/img/thumb-04.jpg"></a>
+            href="/images/Gold-mines/thumb-gold-mines-4.jpg">
+            <img src="/images/Gold-mines/thumb-gold-mines-4.jpg"></a>
         </div>
       </div>
       <div class="card">
         <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #5" data-fancybox="gallery"
-            href="./assets/img/thumb-05.jpg">
-            <img src="./assets/img/thumb-05.jpg"></a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #6" data-fancybox="gallery"
-            href="./assets/img/thumb-06.jpg">
-            <img src="./assets/img/thumb-06.jpg"></a>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #7" data-fancybox="gallery"
-            href="./assets/img/thumb-07.jpg">
-            <img src="./assets/img/thumb-07.jpg"></a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #8" data-fancybox="gallery"
-            href="./assets/img/thumb-08.jpg">
-            <img src="./assets/img/thumb-08.jpg"></a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-image"> <a data-fancybox="gallery" data-caption="Caption #9" data-fancybox="gallery"
-            href="./assets/img/IMG_20201214_232550_041.jpg">
-            <img src="./assets/img/IMG_20201214_232550_041.jpg"></a>
+            href="/images/Gold-mines/thumb-gold-mines-5.jpg">
+            <img src="/images/Gold-mines/thumb-gold-mines-5.jpg"></a>
         </div>
       </div>
 
     </div>
   </main>
-
-
-
-
                      <hr>
                <p>
                 Тексты подсказок:
