--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -141,7 +141,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> 16 Апреля 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span> Не Запланировано</span>
                                 </li>
                             </ul>
                         </div>
@@ -239,12 +239,12 @@
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
 
-                                        <p><b>12:45*</b> время сбора группы на экскурсию.
+                                        <p><b> -- </b> время сбора группы на экскурсию.
                                             Сбор в районе 9-й больницы, Правый берег,
                                             дополнительную информацию сбрасываем за 2-3 дня
                                             до тура всем кто записался и оплатил экскурсию 50%.
                                             (как всегда оплата через расчетный счет в течении суток после брони)</p>
-                                        <p><b>13:00</b> после небольшой пешей прогулки мы на месте.
+                                        <p><b> -- </b> после небольшой пешей прогулки мы на месте.
                                             Проходим частную территорию и попадаем в Лимонарий!
                                             Удивительный уголок солнечно-лимонного счастья.
                                             Слушаем историю создания этого чуда. Обязательно
